# soqa-sdk

./: Cargo.toml  README.md  allfiles.txt
examples/: stream_data.rs
src/: cli.rs  config.rs  error.rs  export.rs  lib.rs  main.rs  models.rs  visualization.rs
src/api/: rest.rs  websocket.rs
src/exchanges/: binance.rs  bybit.rs  kraken.rs  kucoin.rs  mod.rs  okx.rs
