[package]
name = "soqa-sdk"
version = "0.1.0"
edition = "2021"
keywords = ["hft", "trading", "market-data", "rust", "api"]
authors = ["Novikov Kirill | knQzx everywhere | t.me/knQzx"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
csv = "1.3"
parquet = "55.1.0"
rusqlite = "0.31"
tui = "0.19"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json"] }